tests/valid/ternary/01_ok.cps
let a: integer = 1;
let b: integer = 2;
let m = (a < b) ? a : b;  // infiere integer
