tests/invalid/classes/04_prop_on_non_object.cps
let x: integer = 1;
x.foo;    // acceso a propiedad sobre no-objeto E033
